# freee-accounting-sdk-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  update_sdk_src.sh
docs/: ApprovalRequestResponseApprovalRequestApprovalRequestFormParts.md  ApprovalRequestUpdateParams.md  BankResponse.md  BankResponseBank.md  CompaniesApi.md  DealResponseDealDetails.md  DealResponseDealReceipts.md  ExpenseApplicationUpdateParams.md  ExpenseApplicationsApi.md  ItemResponseItem.md  ManualJournalResponseManualJournalDetails.md  ManualJournalUpdateParams.md  PartnerResponsePartner.md  PaymentRequestUpdateParams.md  QuotationIndexResponseQuotationContents.md  ReceiptResponse.md  SectionResponseSection.md  TagResponse.md  TaxResponseTax.md  TransferResponseTransfer.md  TrialBalanceApi.md  WalletTxnResponseWalletTxn.md  WalletableResponseWalletable.md
example_console/: Cargo.toml
example_console/src/: main.rs
examples/console/: Cargo.toml
examples/src/: main.rs
examples/web/: Cargo.toml  token.db
examples/web/src/: main.rs  main.rs.bk0415
examples/web/templates/: home.html  index.html
sdk/: Cargo.toml  README.md
sdk/.openapi-generator/: FILES
sdk/docs/: ApprovalRequestCreateParams.md  ApprovalRequestsApi.md  ApprovalRequestsIndexResponseRequestItems.md  CompaniesPlanApi.md  CompanyResponseCompany.md  CompanyResponseCompanyAccountItems.md  CompanyResponseCompanyItems.md  CompanyResponseCompanyPartners.md  CompanyResponseCompanySections.md  CompanyResponseCompanyTags.md  CompanyResponseCompanyTaxCodes.md  CompanyResponseCompanyTaxes.md  CompanyResponseCompanyWalletables.md  (+31 more)
(+651 files in other folders)
