[package]
name = "openapi-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi-sdk = { path = "../sdk" }
tokio = { version = "1.14.0", features = ["full"] }

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
