[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
actix-web = "4"
askama = "0.11.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.19"
rusqlite = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1.0"
oauth2 = "4.1"
reqwest = "0.11"
openapi-sdk = { path = "../../sdk" }

[build-dependencies]
askama = "0.11.0"
